clusters/kubenuc/apps/jfrog-acr/manifests/namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: jfrog
  labels:
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: v1.33
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: v1.33
